Add redirection rules for 2 new datasets: TERN Ecosystem processes and Wet Tropics Vertebrate.

--- a/conf/linked.data.gov.au/org/tern.conf
+++ b/conf/linked.data.gov.au/org/tern.conf
@@ -31,6 +31,72 @@ RewriteRule ^\/dataset\/ausplots(.*).owl$ https://linkeddata.tern.org.au/api/v1.
 RewriteRule ^/dataset/ausplots(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/ausplots$1&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
 
 
+# https://linked.data.gov.au/dataset/tern-ecosystem-processes
+# Dataset
+# Turtle
+RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^\/dataset\/tern-ecosystem-processes(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+RewriteRule ^\/dataset\/tern-ecosystem-processes(.*).ttl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+# RDF/XML
+RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
+RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
+RewriteRule ^\/dataset\/tern-ecosystem-processes(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/rdf+xml [R=302,L]
+RewriteRule ^\/dataset\/tern-ecosystem-processes(.*).rdf$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/rdf+xml [R=302,L]
+# N-Triples
+RewriteCond %{QUERY_STRING} ^_format=application/n-triples$ [OR]
+RewriteCond %{HTTP:Accept} application/n-triples [NC]
+RewriteRule ^\/dataset\/tern-ecosystem-processes(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/n-triples [R=302,L]
+RewriteRule ^\/dataset\/tern-ecosystem-processes(.*).nt$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/n-triples [R=302,L]
+# JSON-LD
+RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
+RewriteCond %{HTTP:Accept} application/ld\+json [NC]
+RewriteRule ^\/dataset\/tern-ecosystem-processes(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/ld+json [R=302,L]
+RewriteRule ^\/dataset\/tern-ecosystem-processes(.*).jsonld$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/ld+json [R=302,L]
+# Notation3
+RewriteCond %{QUERY_STRING} ^_format=text/n3$ [OR]
+RewriteCond %{HTTP:Accept} text/n3 [NC]
+RewriteRule ^\/dataset\/tern-ecosystem-processes(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/n3 [R=302,L]
+RewriteRule ^\/dataset\/tern-ecosystem-processes(.*).n3$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/n3 [R=302,L]
+# .owl file extension
+RewriteRule ^\/dataset\/tern-ecosystem-processes(.*).owl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+# HTML
+RewriteRule ^/dataset/tern-ecosystem-processes(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/tern-ecosystem-processes$1&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
+
+
+# https://linked.data.gov.au/dataset/wet-tropics-vertebrate
+# Dataset
+# Turtle
+RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*).ttl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+# RDF/XML
+RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
+RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
+RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/rdf+xml [R=302,L]
+RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*).rdf$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/rdf+xml [R=302,L]
+# N-Triples
+RewriteCond %{QUERY_STRING} ^_format=application/n-triples$ [OR]
+RewriteCond %{HTTP:Accept} application/n-triples [NC]
+RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/n-triples [R=302,L]
+RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*).nt$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/n-triples [R=302,L]
+# JSON-LD
+RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
+RewriteCond %{HTTP:Accept} application/ld\+json [NC]
+RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/ld+json [R=302,L]
+RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*).jsonld$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/ld+json [R=302,L]
+# Notation3
+RewriteCond %{QUERY_STRING} ^_format=text/n3$ [OR]
+RewriteCond %{HTTP:Accept} text/n3 [NC]
+RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/n3 [R=302,L]
+RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*).n3$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/n3 [R=302,L]
+# .owl file extension
+RewriteRule ^\/dataset\/wet-tropics-vertebrate(.*).owl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+# HTML
+RewriteRule ^/dataset/wet-tropics-vertebrate(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/wet-tropics-vertebrate$1&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
+
+
 # https://linked.data.gov.au/dataset/bdbsa
 # Dataset
 # Turtle
