removed legacy domains 443

--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -5,7 +5,7 @@
 #
 # Implemented from PID Svc rules by Edmond Chuc, 13/08/2018
 # Major updates by Nicholas Car in March, 2021
-<VirtualHost *:80 *:443>
+<VirtualHost *:80>
     ServerName environment.data.gov.au
 
 	ErrorLog ${APACHE_LOG_DIR}/environment.data.gov.au/error.log
@@ -14,7 +14,7 @@
 	RewriteEngine on
 
 	# homepage
-        RewriteRule ^/$ http://www.linked.data.gov.au/environmentdatagovau [L,R=302]
+        RewriteRule (.*) http://www.linked.data.gov.au/environmentdatagovau [L,R=302]
 
     # - def BA Glossary
     RewriteCond %{QUERY_STRING} ^(_format|_mediatype)=text/turtle$
