--- a/conf/linked.data.gov.au/org/agldwg.conf
+++ b/conf/linked.data.gov.au/org/agldwg.conf
@@ -29,11 +29,13 @@ RewriteRule ^/def/datatype(.*).ttl$                     https://raw.githack.com/
 RewriteRule ^/def/datatype(.*)$                         https://raw.githack.com/AGLDWG/datatype-ont/master/html/datatype.html$1 [R=302,L]
 
 
-# https://linked.data.gov.au/def/fl
+# https://linked.data.gov.au/def/cn
 RewriteCond %{QUERY_STRING} _mediatype=text/turtle
-RewriteRule ^/def/fl                                    https://raw.githubusercontent.com/AGLDWG/feature-labelling-model/main/model.ttl [R=302,L]
-RewriteRule ^/def/fl.ttl                                https://raw.githubusercontent.com/AGLDWG/feature-labelling-model/main/model.ttl [R=302,L]
-RewriteRule ^/def/fl                                    https://agldwg.github.io/feature-labelling-model/model.html [R=302,L]
+Header set Content-Type text/turtle
+RewriteRule ^/def/cn($|/(.*))                           https://raw.githubusercontent.com/AGLDWG/compound-naming-model/main/model.ttl [R=302,L]
+Header set Content-Type text/turtle
+RewriteRule ^/def/cn.ttl                                https://raw.githubusercontent.com/AGLDWG/compound-naming-model/main/model.ttl [R=302,L]
+RewriteRule ^/def/cn($|/(.*))                           https://agldwg.github.io/compound-naming-model/model.html [R=302,L]
 
 
 # https://linked.data.gov.au/def/gnaf
@@ -67,6 +69,16 @@ RewriteRule ^/def/iso19160-1-address(.*)$                 https://raw.githack.co
 RewriteRule ^/def/iso19160-1-address(.*).ttl$             https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.ttl [R=302,L]
 RewriteRule ^/def/iso19160-1-address/Address/code/(.*)$   https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/codelist.ttl? [R=302,L]
 RewriteRule ^/def/iso19160-1-address(.*)$                 https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.html$1 [R=302,L]
+
+
+# https://linked.data.gov.au/def/lifecycle
+RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+Header set Content-Type text/turtle
+RewriteRule ^/def/lifecycle(.*)$                 https://agldwg.github.io/lifecycle-model/lifecycle.ttl? [R=302,L]
+Header set Content-Type text/turtle
+RewriteRule ^/def/lifecycle(.*).ttl$             https://agldwg.github.io/lifecycle-model/lifecycle.ttl [R=302,L]
+RewriteRule ^/def/lifecycle(.*)$                 https://agldwg.github.io/lifecycle-model/lifecycle.html$1 [R=302,L]
 
 
 # https://linked.data.gov.au/def/prof-roles
