--- a/conf/linked.data.gov.au/org/qsi.conf
+++ b/conf/linked.data.gov.au/org/qsi.conf
@@ -21,3 +21,9 @@ RewriteCond %{QUERY_STRING} _mediatype=text/turtle
 RewriteRule ^/def/roads                 https://raw.githubusercontent.com/Spatial-Information-QLD/roads-model/main/model.ttl [R=302,L]
 RewriteRule ^/def/roads.ttl             https://raw.githubusercontent.com/Spatial-Information-QLD/roads-model/main/model.ttl [R=302,L]
 RewriteRule ^/def/roads                 https://spatial-information-qld.github.io/roads-model/model.html [R=302,L]
+
+# https://linked.data.gov.au/def/gn
+RewriteCond %{QUERY_STRING} _mediatype=text/turtle
+RewriteRule ^/def/gn($|/.*)             https://raw.githubusercontent.com/Spatial-Information-QLD/geographical-names-model/main/model.ttl [R=302,L]
+RewriteRule ^/def/gn.ttl                https://raw.githubusercontent.com/Spatial-Information-QLD/geographical-names-model/main/model.ttl [R=302,L]
+RewriteRule ^/def/gn($|/.*)             https://spatial-information-qld.github.io/geographical-names-model/model.html [R=302,L]
