--- a/conf/infrastructure.data.gov.au.conf
+++ b/conf/infrastructure.data.gov.au.conf
@@ -8,7 +8,7 @@
 # Implementation of only 1 of 2 infrastructure.data.gov.au PID Svc patterns (EUDM datasets) as the EUDM ontology
 # (the only other pattern) has been deprecated. Nick Car, 13/08/2018
 #
-<VirtualHost *:80 *:443>
+<VirtualHost *:80>
 	ServerName infrastructure.data.gov.au
 
         RewriteEngine on
