--- a/conf/lab.environment.data.gov.au.conf
+++ b/conf/lab.environment.data.gov.au.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80 *:443>
+<VirtualHost *:80>
         ServerName lab.environment.data.gov.au
 
         ErrorLog ${APACHE_LOG_DIR}/lab.environment.data.gov.au/error.log
