--- a/conf/linked.data.gov.au/linked.conf
+++ b/conf/linked.data.gov.au/linked.conf
@@ -41,7 +41,7 @@
         RewriteRule ^/(governance|assistance|showcase|events|groups|howto|contact|join|nonresolving|nosuch|404)$	http://www.linked.data.gov.au/$1 [L,R=302]
 
         # final 404 rule for non-existent PID
-        ErrorDocument 404 http://www.linked.data.gov.au//404.html
+        ErrorDocument 404 https://www.linked.data.gov.au/404.html
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteRule (.*) - [R=404]  # L included by default for 300 < R > 399
 
