--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -5,7 +5,7 @@
 #
 # Copy 'n paste from previous PID Proxy server Apache file. Nick Car, 13/08/2018
 #
-<VirtualHost *:80 *:443>
+<VirtualHost *:80>
         ServerName test.linked.data.gov.au
 
         RewriteEngine  on
