--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -13,8 +13,8 @@
 
 	RewriteEngine on
 
-	# homepage
-        RewriteRule (.*) http://www.linked.data.gov.au/environmentdatagovau [L,R=302]
+	# tombstoned
+    RewriteRule (.*) http://www.linked.data.gov.au/environmentdatagovau [L,R=302]
 
     # - def BA Glossary
     RewriteCond %{QUERY_STRING} ^(_format|_mediatype)=text/turtle$
