tombstoning old PID domains

--- a/conf/lab.environment.data.gov.au.conf
+++ b/conf/lab.environment.data.gov.au.conf
@@ -11,7 +11,7 @@
 
 	RewriteEngine on
 	# tombstoned
-    RewriteRule (.*) http://www.linked.data.gov.au/environmentdatagovau [L,R=302]
+    RewriteRule (.*) http://203.100.30.55/lab.environment.data.gov.au.html [L,R=302]
         #<Location />
         #        ProxyPass http://130.56.251.47/ keepalive=On
         #        ProxyPassReverse http://130.56.251.47/
