--- a/conf/linked.data.gov.au/linked.conf
+++ b/conf/linked.data.gov.au/linked.conf
@@ -38,7 +38,7 @@
 
         # AGLDWG website
         RewriteRule ^/?$			https://www.linked.data.gov.au [L,R=302]
-        RewriteRule ^/(governance|assistance|showcase|events|groups|howto|contact|join|nonresolving|nosuch|404)$	http://www.linked.data.gov.au/$1 [L,R=302]
+        RewriteRule ^/(governance|assistance|showcase|events|groups|howto|contact|join|nonresolving|nosuch|404)$	https://www.linked.data.gov.au/$1 [L,R=302]
 
         # final 404 rule for non-existent PID
         ErrorDocument 404 https://www.linked.data.gov.au/404.html
