--- a/conf/reference.data.gov.au.conf
+++ b/conf/reference.data.gov.au.conf
@@ -22,7 +22,7 @@
         RewriteEngine on
 
         # tombstoned
-        RewriteRule (.*) http://www.linked.data.gov.au/environmentdatagovau [L,R=302]
+        RewriteRule (.*) http://203.100.30.55/reference.data.gov.au.html [L,R=302]
 
         # http://reference.data.gov.au/def/ont/agrif
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
