--- a/conf/infrastructure.data.gov.au.conf
+++ b/conf/infrastructure.data.gov.au.conf
@@ -14,7 +14,7 @@
         RewriteEngine on
 
         # tombstoned
-        RewriteRule (.*) http://www.linked.data.gov.au/environmentdatagovau [L,R=302]
+        RewriteRule (.*) http://203.100.30.55/infrastructure.data.gov.au.html [L,R=302]
 
 	    # EUDM datasets
         # RewriteRule ^/dataset/eudm/([0-9a-f\-]{36})$ http://eudm.csiro.au/assets/$1 [L]
