--- a/conf/linked.data.gov.au/org/abs.conf
+++ b/conf/linked.data.gov.au/org/abs.conf
@@ -1,22 +1,23 @@
 # https://linked.data.gov.au/dataset/asgs2011
-# Dataset
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/asgs2011$                         http://asgsld.net/2011/index.ttl? [R=302,L]
-RewriteRule ^/dataset/asgs2011.ttl$                     http://asgsld.net/2011/index.ttl [R=302,L]
-RewriteRule ^/dataset/asgs2011$                         http://asgsld.net/2011  [R=302,L]
-# Top-level Registers
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/asgs2011/(.*)/$                   http://asgsld.net/2011/$1/?_format=text/turtle [R=302,L]
-RewriteRule ^/dataset/asgs2011/(.*)/index.ttl$          http://asgsld.net/2011/$1/?_format=text/turtle [R=302,L]
-RewriteRule ^/dataset/asgs2011/(.*)/$                   http://asgsld.net/2011/$1/ [R=302,L]
-# sub-dataset objects
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/asgs2011/(.*)$                    http://asgsld.net/2011/$1?_format=text/turtle [R=302,L]
-RewriteRule ^/dataset/asgs2011/(.*).ttl$                http://asgsld.net/2011/$1?_format=text/turtle [R=302,L]
-RewriteRule ^/dataset/asgs2011/(.*)$                    http://asgsld.net/2011/$1 [R=302,L]
+RewriteRule ^/dataset/asgs2011(.*)                        http://203.100.30.55/broken.html [L]
+# # Dataset
+# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+# RewriteCond %{HTTP:Accept} text/turtle [NC]
+# RewriteRule ^/dataset/asgs2011$                         http://asgsld.net/2011/index.ttl? [R=302,L]
+# RewriteRule ^/dataset/asgs2011.ttl$                     http://asgsld.net/2011/index.ttl [R=302,L]
+# RewriteRule ^/dataset/asgs2011$                         http://asgsld.net/2011  [R=302,L]
+# # Top-level Registers
+# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+# RewriteCond %{HTTP:Accept} text/turtle [NC]
+# RewriteRule ^/dataset/asgs2011/(.*)/$                   http://asgsld.net/2011/$1/?_format=text/turtle [R=302,L]
+# RewriteRule ^/dataset/asgs2011/(.*)/index.ttl$          http://asgsld.net/2011/$1/?_format=text/turtle [R=302,L]
+# RewriteRule ^/dataset/asgs2011/(.*)/$                   http://asgsld.net/2011/$1/ [R=302,L]
+# # sub-dataset objects
+# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+# RewriteCond %{HTTP:Accept} text/turtle [NC]
+# RewriteRule ^/dataset/asgs2011/(.*)$                    http://asgsld.net/2011/$1?_format=text/turtle [R=302,L]
+# RewriteRule ^/dataset/asgs2011/(.*).ttl$                http://asgsld.net/2011/$1?_format=text/turtle [R=302,L]
+# RewriteRule ^/dataset/asgs2011/(.*)$                    http://asgsld.net/2011/$1 [R=302,L]
 
 
 # https://linked.data.gov.au/dataset/asgs2016
