test broken with iri

--- a/conf/linked.data.gov.au/org/abs.conf
+++ b/conf/linked.data.gov.au/org/abs.conf
@@ -1,5 +1,5 @@
 # https://linked.data.gov.au/dataset/asgs2011
-RewriteRule ^/dataset/asgs2011(.*)                        http://203.100.30.55/broken.html [L]
+RewriteRule ^/dataset/asgs2011(.*)                        http://203.100.30.55/broken.html\?iri=https://linked.data.gov.au/dataset/asgs$1 [L]
 # # Dataset
 # RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
