--- a/conf/linked.data.gov.au/org/abs.conf
+++ b/conf/linked.data.gov.au/org/abs.conf
@@ -1,5 +1,5 @@
 # https://linked.data.gov.au/dataset/asgs2011
-RewriteRule ^/dataset/asgs2011(.*)                        http://203.100.30.55/broken.html\?iri=https://linked.data.gov.au/dataset/asgs$1 [L]
+RewriteRule ^/dataset/asgs2011(.*)                        http://203.100.30.55/broken.html\?iri=https://linked.data.gov.au/dataset/asgs2011$1 [L]
 # # Dataset
 # RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -21,24 +21,25 @@ RewriteRule ^/dataset/asgs2011(.*)                        http://203.100.30.55/b
 
 
 # https://linked.data.gov.au/dataset/asgs2016
+RewriteRule ^/dataset/asgs2016(.*)                        http://203.100.30.55/broken.html\?iri=https://linked.data.gov.au/dataset/asgs2016$1 [L]
 # Dataset
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/asgs2016$                         http://asgsld.net/2016/index.ttl? [R=302,L]
-RewriteRule ^/dataset/asgs2016.ttl$                     http://asgsld.net/2016/index.ttl [R=302,L]
-RewriteRule ^/dataset/asgs2016$                         http://asgsld.net/2016  [R=302,L]
-# Top-level Registers
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/asgs2016/(.*)/$                   http://asgsld.net/2016/$1/?_format=text/turtle [R=302,L]
-RewriteRule ^/dataset/asgs2016/(.*)/index.ttl$          http://asgsld.net/2016/$1/?_format=text/turtle [R=302,L]
-RewriteRule ^/dataset/asgs2016/(.*)/$                   http://asgsld.net/2016/$1/ [R=302,L]
-# sub-dataset objects
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/asgs2016/(.*)$                    http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
-RewriteRule ^/dataset/asgs2016/(.*).ttl$                http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
-RewriteRule ^/dataset/asgs2016/(.*)$                    http://asgsld.net/2016/$1 [R=302,L]
+# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+# RewriteCond %{HTTP:Accept} text/turtle [NC]
+# RewriteRule ^/dataset/asgs2016$                         http://asgsld.net/2016/index.ttl? [R=302,L]
+# RewriteRule ^/dataset/asgs2016.ttl$                     http://asgsld.net/2016/index.ttl [R=302,L]
+# RewriteRule ^/dataset/asgs2016$                         http://asgsld.net/2016  [R=302,L]
+# # Top-level Registers
+# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+# RewriteCond %{HTTP:Accept} text/turtle [NC]
+# RewriteRule ^/dataset/asgs2016/(.*)/$                   http://asgsld.net/2016/$1/?_format=text/turtle [R=302,L]
+# RewriteRule ^/dataset/asgs2016/(.*)/index.ttl$          http://asgsld.net/2016/$1/?_format=text/turtle [R=302,L]
+# RewriteRule ^/dataset/asgs2016/(.*)/$                   http://asgsld.net/2016/$1/ [R=302,L]
+# # sub-dataset objects
+# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+# RewriteCond %{HTTP:Accept} text/turtle [NC]
+# RewriteRule ^/dataset/asgs2016/(.*)$                    http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
+# RewriteRule ^/dataset/asgs2016/(.*).ttl$                http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
+# RewriteRule ^/dataset/asgs2016/(.*)$                    http://asgsld.net/2016/$1 [R=302,L]
 
 
 # https://linked.data.gov.au/dataset/asgsed3
