Specify DocumentRoot explicitly in vhost
Specify the value of DocumentRoot in the virtual host.
(Is it otherwise empty?)

--- a/conf/linked.data.gov.au/linked.conf
+++ b/conf/linked.data.gov.au/linked.conf
@@ -7,6 +7,8 @@
 <VirtualHost *:443>
         ServerName linked.data.gov.au
 
+        DocumentRoot /var/www/html
+
         RewriteEngine  on
 
         ServerAdmin nicholas.car@anu.edu.au
