Fix error using DOCUMENT_ROOT
Fix my error in the RewriteRule that uses DOCUMENT_ROOT.

--- a/conf/linked.data.gov.au/linked.conf
+++ b/conf/linked.data.gov.au/linked.conf
@@ -44,7 +44,8 @@
 
         # final 404 rule for non-existent PID
         ErrorDocument 404 https://www.linked.data.gov.au/404.html
-        RewriteCond ${DOCUMENT_ROOT}}%{REQUEST_FILENAME} !-f
+
+        RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
         RewriteRule (.*) - [R=404]  # L included by default for 300 < R > 399
 
         # Let's Encrypt Certificate details
