--- a/conf/linked.data.gov.au/org/agldwg.conf
+++ b/conf/linked.data.gov.au/org/agldwg.conf
@@ -31,9 +31,11 @@ RewriteRule ^/def/datatype(.*)$                         https://raw.githack.com/
 
 # https://linked.data.gov.au/def/cn
 RewriteCond %{QUERY_STRING} _mediatype=text/turtle
-Header set Content-Type text/turtle
+### Temporarily comment out header setting; as is, it applies to _every_ request! Need to make it properly conditional.
+### Header set Content-Type text/turtle
 RewriteRule ^/def/cn($|/(.*))                           https://raw.githubusercontent.com/AGLDWG/compound-naming-model/main/model.ttl [R=302,L]
-Header set Content-Type text/turtle
+### Temporarily comment out header setting; as is, it applies to _every_ request! Need to make it properly conditional.
+### Header set Content-Type text/turtle
 RewriteRule ^/def/cn.ttl                                https://raw.githubusercontent.com/AGLDWG/compound-naming-model/main/model.ttl [R=302,L]
 RewriteRule ^/def/cn($|/(.*))                           https://agldwg.github.io/compound-naming-model/model.html [R=302,L]
 
@@ -74,9 +76,11 @@ RewriteRule ^/def/iso19160-1-address(.*)$                 https://raw.githack.co
 # https://linked.data.gov.au/def/lifecycle
 RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-Header set Content-Type text/turtle
+### Temporarily comment out header setting; as is, it applies to _every_ request! Need to make it properly conditional.
+### Header set Content-Type text/turtle
 RewriteRule ^/def/lifecycle(.*)$                 https://agldwg.github.io/lifecycle-model/lifecycle.ttl? [R=302,L]
-Header set Content-Type text/turtle
+### Temporarily comment out header setting; as is, it applies to _every_ request! Need to make it properly conditional.
+### Header set Content-Type text/turtle
 RewriteRule ^/def/lifecycle(.*).ttl$             https://agldwg.github.io/lifecycle-model/lifecycle.ttl [R=302,L]
 RewriteRule ^/def/lifecycle(.*)$                 https://agldwg.github.io/lifecycle-model/lifecycle.html$1 [R=302,L]
 
