Rewrite directly to https for tombstone pages
In the VirtualHost definitions for legacy hosts, redirect
directly to https://linked.data... for the tombstone page,
not to http://linked.data....

--- a/conf/infrastructure.data.gov.au.conf
+++ b/conf/infrastructure.data.gov.au.conf
@@ -14,7 +14,7 @@
         RewriteEngine on
 
         # tombstoned
-        RewriteRule (.*) http://linked.data.gov.au/static/infrastructure.data.gov.au.html [L,R=302]
+        RewriteRule (.*) https://linked.data.gov.au/static/infrastructure.data.gov.au.html [L,R=302]
 
 	    # EUDM datasets
         # RewriteRule ^/dataset/eudm/([0-9a-f\-]{36})$ http://eudm.csiro.au/assets/$1 [L]
