--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -14,7 +14,7 @@
 	RewriteEngine on
 
 	# tombstoned
-    RewriteRule (.*) http://linked.data.gov.au/static/environment.data.gov.au.html [L,R=302]
+    RewriteRule (.*) https://linked.data.gov.au/static/environment.data.gov.au.html [L,R=302]
 
     # - def BA Glossary
     RewriteCond %{QUERY_STRING} ^(_format|_mediatype)=text/turtle$
