Fix leaky /def/dataset rewriting for /def/dataset-relationships
The rewriting for /def/dataset breaks the rewriting for
/def/dataset-relationships.

Fix the former, so that the latter also works.

--- a/conf/linked.data.gov.au/org/agldwg.conf
+++ b/conf/linked.data.gov.au/org/agldwg.conf
@@ -14,11 +14,12 @@ RewriteRule ^/def/agop/example.invalid-2$              https://raw.githack.com/A
 
 # https://linked.data.gov.au/def/dataset
 # all requests for RDF (turtle) just go to the whole borehole.ttl doc
+# Use of "($|/.*)" essenttial, as there is also /def/dataset-relationships elsewhere.
 RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/dataset(.*)$                          https://raw.githack.com/AGLDWG/dataset-ont/master/dataset.ttl? [R=302,L]
-RewriteRule ^/def/dataset(.*).ttl$                      https://raw.githack.com/AGLDWG/dataset-ont/master/dataset.ttl [R=302,L]
-RewriteRule ^/def/dataset(.*)$	                        https://raw.githack.com/AGLDWG/dataset-ont/master/dataset.html$1 [R=302,L]
+RewriteRule ^/def/dataset($|/.*)                        https://raw.githack.com/AGLDWG/dataset-ont/master/dataset.ttl? [R=302,L]
+RewriteRule ^/def/dataset(|/.*).ttl$                    https://raw.githack.com/AGLDWG/dataset-ont/master/dataset.ttl [R=302,L]
+RewriteRule ^/def/dataset($|(/.*))                      https://raw.githack.com/AGLDWG/dataset-ont/master/dataset.html$2 [R=302,L]
 
 
 # https://linked.data.gov.au/def/datatype
