fixed all Git/deployed differences

--- a/conf/linked.data.gov.au/org/ga.conf
+++ b/conf/linked.data.gov.au/org/ga.conf
@@ -142,12 +142,18 @@ RewriteRule ^/dataset/gnaf$                            https://gnaf.linked.fsdf.
 # Address, Address Site, Locality, Street Locality Feature Collections
 RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/dataset/gnaf/address$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses?_profile=geo&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/address.ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses?_profile=geo&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/address$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses" [R=302,L]
 RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality).ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1" [R=302,L]
 # Address, Address Site, Locality, Street Locality Features
 RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/dataset/gnaf/(address)/(.*)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1es/items/$2?_profile=geo&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/(address)/(.*).ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1es/items/$2?_profile=geo&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/(address)/(.*)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1es/items/$2" [R=302,L]
 RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)/(.*)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2?_profile=geo&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)/(.*).ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2?_profile=geo&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)/(.*)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2" [R=302,L]
