fixed all Git/deployed differences after merging

--- a/conf/linked.data.gov.au/org/abs.conf
+++ b/conf/linked.data.gov.au/org/abs.conf
@@ -1,5 +1,5 @@
 # https://linked.data.gov.au/dataset/asgs2011
-RewriteRule ^/dataset/asgs2011(.*)                        https://linked.data.gov.au/static/broken.html\?iri=https://linked.data.gov.au/dataset/asgs2011$1 [L]
+RewriteRule ^/dataset/asgs2011(.*)                        http://203.100.30.55/broken.html\?iri=https://linked.data.gov.au/dataset/asgs2011$1 [L]
 # # Dataset
 # RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -21,7 +21,7 @@ RewriteRule ^/dataset/asgs2011(.*)                        https://linked.data.go
 
 
 # https://linked.data.gov.au/dataset/asgs2016
-RewriteRule ^/dataset/asgs2016(.*)                        https://linked.data.gov.au/static/broken.html\?iri=https://linked.data.gov.au/dataset/asgs2016$1 [L]
+RewriteRule ^/dataset/asgs2016(.*)                        http://203.100.30.55/broken.html\?iri=https://linked.data.gov.au/dataset/asgs2016$1 [L]
 # Dataset
 # RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
