--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -691,11 +691,9 @@ RewriteRule ^/def/trs(.*)$ "https://vocabs.gsq.digital/object?vocab_id=trs&uri=h
 # https://linked.data.gov.au/def/borehole
 RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-# FIXME all three RewriteRules are wrong, as they also match, e.g., "/def/borehole-inclination" (see test data) and all other fallthrough instances of "/def/borehole-...".
-# FIXME next two rows are wrong; should point to:       https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/model/borehole.ttl
-RewriteRule ^/def/borehole(.*)$                         https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/borehole.ttl? [R=302,L]
-RewriteRule ^/def/borehole(.*).ttl$                     https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/borehole.ttl [R=302,L]
-RewriteRule ^/def/borehole(.*)$                         https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/borehole.html$1 [R=302,L]
+RewriteRule ^/def/borehole$                         https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/model/borehole.ttl? [R=302,L]
+RewriteRule ^/def/borehole.ttl$                     https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/model/borehole.ttl [R=302,L]
+RewriteRule ^/def/borehole$                         https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/borehole.html [R=302,L]
 
 
 # https://linked.data.gov.au/def/geofeatures
