GSQ & GA redirect & test fixes

--- a/conf/linked.data.gov.au/org/ga.conf
+++ b/conf/linked.data.gov.au/org/ga.conf
@@ -166,12 +166,12 @@ RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/dataset/geofabric$                            "http://geofabric.linked.fsdf.org.au/dataset/geofabric?_profile=dcat&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/dataset/geofabric.ttl$                        "http://geofabric.linked.fsdf.org.au/dataset/geofabric?_profile=dcat&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/dataset/geofabric$                            https://geofabric.linked.fsdf.org.au/dataset/geofabric [R=302,L]
-# Drainage Division, River Region & Catchement Feature Collections
+# Drainage Division, River Region & Catchment Feature Collections
 RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/geofabric/fc/(drainagedivisions|riverregions|catchments)$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/geofabric/fc/(drainagedivisions|riverregions|catchments).ttl$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/geofabric/fc/(drainagedivisions|riverregions|catchments)$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1" [R=302,L]
+RewriteRule ^/dataset/geofabric/(drainagedivisions|riverregions|catchments)$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/geofabric/(drainagedivisions|riverregions|catchments).ttl$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/geofabric/(drainagedivisions|riverregions|catchments)$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1" [R=302,L]
 # Drainage Division, River Region & Catchement
 RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
