--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -581,8 +581,8 @@ RewriteRule ^/def/sample-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=s
 # https://linked.data.gov.au/def/sampling-method
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/sampling-method(.*)$ "https://vocabs.gsq.digital/object?vocab_id=sampling-method&uri=http://linked.data.gov.au/def/sampling-method$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/sampling-method(.*)$ "https://vocabs.gsq.digital/object?vocab_id=sampling-method&uri=http://linked.data.gov.au/def/sampling-method$1" [R=302,NE,L]
+RewriteRule ^/def/sampling-method(.*)$ "https://vocabs.gsq.digital/object?uri=http://linked.data.gov.au/def/sampling-method$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/sampling-method(.*)$ "https://vocabs.gsq.digital/object?uri=http://linked.data.gov.au/def/sampling-method$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/seismic-dimensionality
@@ -593,10 +593,7 @@ RewriteRule ^/def/seismic-dimensionality(.*)$ "https://vocabs.gsq.digital/object
 
 
 # https://linked.data.gov.au/def/seismic-sampling-method
-RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/seismic-sampling-method(.*)$ "https://vocabs.gsq.digital/object?vocab_id=seismic-sampling-method&uri=http://linked.data.gov.au/def/seismic-sampling-method$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/seismic-sampling-method(.*)$ "https://vocabs.gsq.digital/object?vocab_id=seismic-sampling-method&uri=http://linked.data.gov.au/def/seismic-sampling-method$1" [R=302,NE,L]
+RewriteRule ^/def/seismic-sampling-method(.*)$ "https://linked.data.gov.au/static/tombstoned.html" [R=302,L]
 
 
 # https://linked.data.gov.au/def/site-detail-type
